# darksword

./: .gitignore  README.md  pyproject.toml  requirements.txt
darksword/: __init__.py  cli.py  config.py  payloads.py  server.py
payloads/: pe_main.js  rce_worker.js  rce_worker_18.6.js
templates/: frame.html  index.html
